[package]
name = "test-rpgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-backend-pcsc = "0.5.0"
chrono = "0.4.35"
openpgp-card = "0.4.2"
pgp = "0.11.0"
rand = "0.8.5"
sha2 = "0.10.8"
smallvec = "1.13.1"
testresult = "0.4.0"
unimpl = "0.1.2"
